# TauriPluginSql

./: Cargo.toml  DEPENDENTS.md  README.md  package.json
Source/: lib.rs  plugin.rs
Source/decode/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
dist-js/: index.d.ts  index.min.js  index.min.js.map  index.mjs  index.mjs.map
guest-js/: index.ts
src/: lib.rs
