[dependencies]
futures-core = "0.3"
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.8", features = ["json", "time"] }
tauri = { workspace = true }
thiserror = { workspace = true }
time = "0.3"
tokio = { version = "1", features = ["sync"] }

[features]
mysql = ["sqlx/mysql", "sqlx/runtime-tokio-rustls"]
postgres = ["sqlx/postgres", "sqlx/runtime-tokio-rustls"]
sqlite = ["sqlx/sqlite", "sqlx/runtime-tokio"]

[lib]
path = "Source/lib.rs"

[package]
authors = { workspace = true }
description = "Interface with SQL databases."
edition = { workspace = true }
license-file = { workspace = true }
name = "tauri-plugin-sql"
rust-version = "1.80"
version = "0.0.0"
